# iva_dashboard_new

./: .dockerignore  .gitattributes  .gitignore  README.md  build.monitor_agent.Dockerfile  build.monitor_serv.Dockerfile  build.poetry.monitor_agent.Dockerfile  docker-compose.yml  iva-dev.build.docker-compose.yml  iva-dev.docker-compose.yml  iva-dev.monitor_nginx.Dockerfile  iva-dev.monitor_serv.Dockerfile  monitor_agent.Dockerfile  monitor_agent.env  monitor_server.Dockerfile  monitor_server.env  prod.build.docker-compose.yml  prod.crontab-monitor-postgres-bckp.sh  prod.docker-compose.yml  prod.monitor_agent.Dockerfile  prod.monitor_nginx.Dockerfile  prod.monitor_serv.Dockerfile  prod.monitor_serv_frontend.Dockerfile
monitor_agent/: entrypoint.py  main.py  monitor_agent.Dockerfile  monitor_agent.env  pyproject.toml  reqs.txt  settings.py
monitor_agent/agent/: __init__.py  agent_logger.py  exceptions.py  models.py  ssh_client.py  tests.py
monitor_agent/core/: __init__.py  decorators.py  exceptions.py  redis.py  ssh_client.py  tests.py
monitor_agent/dashboard/: models.py  tests.py
monitor_agent/database/: configuration.py  creator.py  reader.py  updater.py
monitor_agent/db_connector/: __init__.py  configuration.py
monitor_agent/ioh/: __init__.py  exporters.py  handlers.py  ioh_dicts.py
monitor_agent/logic/: base.py  creator.py  exceptions.py  exporter.py  exporters.py  extentions.py  handle.py  pass_handler.py  reader.py  scrape_logic.py  scraper.py  tests.py  updater.py
monitor_agent/monitor_agent_assemble_files/: monitor-agent.txt  prod.monitor-agent.env
monitor_agent/ssh/: session.py
monitor_serv/: entrypoint.py  entrypoint.sh  entrypoint_worker.py  iva-dev.monitor_serv.Dockerfile  manage.py  monitor_serv.Dockerfile  prod.monitor_serv.Dockerfile  prod.monitor_serv_celery.Dockerfile  pyproject.toml  reqs-monitor-server.txt
monitor_serv/api/: logic.py  mixins.py  serializers.py  tasks.py  tests.py  urls.py  views.py
monitor_serv/app_logging/: app_logger.py
monitor_serv/common/: dbrouters.py  pass_handler.py
monitor_serv/core_logic/: base.py  chart.py  extentions.py  filters.py  importers.py  tests.py  views.py
monitor_serv/dashboard/: admin.py  apps.py  data_sender.py  forms.py  handler.py  mixins.py  models.py  package-lock.json  package.json  serializers.py  tests.py  urls.py  views.py  webpack.config.js
monitor_serv/dashboard_detail/: apps.py  mixins.py  tests.py  urls.py  views.py
monitor_serv/dashboard_ivcs/: filters.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
monitor_serv/dashboard_users/: admin.py  apps.py  forms.py  mixins.py  models.py  password_validation.py  serializers.py  (+4 more)
(+522 files in other folders)
