[tool.poetry]
name = "monitor-agent"
version = "0.8.25"
description = "iva_dashboard_agent"
authors = ["pavelbeard <pavelborodin1995@gmail.com>"]
readme = "README.md"
packages = [{include = "monitor_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.3"
aiopg = "1.4.0"
aiosignal = "1.3.1"
alembic = "1.9.2"
anyio = "3.6.2"
asgiref = "3.6.0"
async-timeout = "4.0.2"
asyncpg = "0.27.0"
attrs = "22.1.0"
bcrypt = "4.0.1"
certifi = "2022.9.24"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
colorama = "0.4.6"
cryptography = "38.0.4"
fastapi = "0.88.0"
frozenlist = "1.3.3"
greenlet = "2.0.2"
h11 = "0.14.0"
idna = "3.4"
mako = "1.2.4"
markupsafe = "2.1.2"
multidict = "6.0.3"
mypy = "1.0.0"
mypy-extensions = "1.0.0"
packaging = "21.3"
paramiko = "2.12.0"
psycopg2-binary = "2.9.5"
pycparser = "2.21"
pydantic = "1.10.2"
pynacl = "1.5.0"
pyparsing = "3.0.9"
pyreadline3 = "3.4.1"
pyyaml = "6.0"
requests = "2.28.1"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.2"
sqlalchemy-stubs = "0.4"
sqlalchemy-utils = "0.39.0"
sqlparse = "0.4.3"
starlette = "0.22.0"
typing-extensions = "4.4.0"
tzdata = "2022.7"
urllib3 = "1.26.13"
uvicorn = "0.20.0"
websocket-client = "1.4.2"
yarl = "1.8.2"
asyncssh = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
